[PAGOPA-1135] dockefile